--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,8 @@
 {
-  "presets": ["env", "stage-2"],
+  "presets": ["babel-preset-env", "stage-2"],
   "plugins": [
     ["babel-plugin-transform-builtin-extend", {
-        globals: ["Error", "Array"]
+        "globals": ["Error", "Array"]
     }]
   ]  
 }
