--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,3 @@
 {
-  "presets": ["babel-preset-env", "stage-2"],
-  "plugins": [
-    ["babel-plugin-transform-builtin-extend", {
-        "globals": ["Error", "Array"]
-    }]
-  ]  
+  "presets": ["babel-preset-env", "stage-2"]
 }
