--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "red-redux-class",
   "version": "1.0.0",
   "description": "Use objects and composition for creating complex reducers which can be easily maintained.",
-  "main": "./distribution/index.js",
+  "main": "./dist/index.js",
   "scripts": {
-    "build": "babel ./source --out-dir ./distribution",
+    "build": "babel ./src --out-dir ./dist",
     "prepare": "npm run build",
-    "test": "cross-env NODE_ENV=test mocha --compilers js:babel-core/register --recursive ./source/**/*.spec.js",
+    "test": "cross-env NODE_ENV=test mocha --compilers js:babel-core/register --recursive ./src/**/*.spec.js",
     "test:watch": "npm run test -- --watch"
   },
   "repository": {
@@ -27,7 +27,6 @@
     "babel-cli": "^6.26.0",
     "babel-core": "6.24.1",
     "babel-loader": "6.4.1",
-    "babel-plugin-transform-builtin-extend": "^1.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-1": "6.24.1",
