--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "red-redux-class",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Use objects and composition for creating complex reducers which can be easily maintained.",
   "main": "./dist/index.js",
   "scripts": {
@@ -26,19 +26,19 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-core": "6.24.1",
+    "babel-core": "^6.26.3",
     "babel-loader": "6.4.1",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-1": "6.24.1",
     "chai": "3.5.0",
     "cross-env": "2.0.0",
-    "mocha": "2.4.5",
+    "mocha": "^5.2.0",
     "rimraf": "^2.6.2"
   },
   "dependencies": {
     "js-logger": "1.3.0",
-    "lodash": "4.17.4",
+    "lodash": "^4.17.10",
     "moment": "2.21.0",
     "redux": "3.6.0"
   }
