--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Use objects and composition for creating complex reducers which can be easily maintained.",
   "main": "./dist/index.js",
   "scripts": {
-    "build": "npm run clean && babel ./src --out-dir ./dist --ignore spec.js",
+    "build": "npm run clean && tsc -p ./",
     "clean": "rimraf dist",
     "prepare": "npm run build",
-    "test": "cross-env NODE_ENV=test mocha --require babel-core/register --recursive ./src/**/*.spec.js",
+    "lint": "tslint 'src/**/*.ts",
+    "test": "cross-env NODE_ENV=test mocha --require ts-node/register --recursive ./src/**/*.spec.ts",
     "test:watch": "npm run test -- --watch"
   },
   "repository": {
@@ -25,16 +26,16 @@
   "author": "Jacek Raczykowski",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "6.4.1",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-stage-1": "6.24.1",
-    "chai": "3.5.0",
+    "@types/chai": "^4.1.4",
+    "@types/mocha": "^5.2.5",
+    "chai": "^3.5.0",
     "cross-env": "2.0.0",
     "mocha": "^5.2.0",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.15.0",
+    "typescript": "^3.0.3"
   },
   "dependencies": {
     "js-logger": "1.3.0",
