--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.7",
   "description": "Use objects and composition for creating complex reducers which can be easily maintained.",
   "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "npm run clean && tsc -p ./",
     "clean": "rimraf dist",
     "prepare": "npm run build",
     "lint": "tslint 'src/**/*.ts",
     "test": "cross-env NODE_ENV=test mocha --require ts-node/register --recursive ./src/**/*.spec.ts",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "jest": "jest"
   },
   "repository": {
     "type": "git",
@@ -28,19 +30,29 @@
   "devDependencies": {
     "@types/chai": "^4.1.4",
     "@types/mocha": "^5.2.5",
+    "@types/redux": "^3.6.0",
     "chai": "^3.5.0",
     "cross-env": "2.0.0",
     "mocha": "^5.2.0",
+    "prettier": "^1.16.4",
     "rimraf": "^2.6.2",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
-    "typescript": "^3.0.3"
+    "typescript": "^3.3.3333"
   },
   "dependencies": {
-    "js-logger": "1.3.0",
-    "lodash": "^4.17.10",
-    "moment": "2.21.0",
-    "redux": "3.6.0"
+    "redux": "^4.0.1"
+  },
+  "jest": {
+    "testRegex": ".*\\.test\\.ts",
+    "transform": {
+      "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ]
   }
 }
