--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "npm run clean && tsc -p ./",
+    "build": "npm run clean && tsc",
     "clean": "rimraf dist",
     "prepare": "npm run build",
     "lint": "tslint 'src/**/*.ts",
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@types/chai": "^4.1.4",
     "@types/mocha": "^5.2.5",
+    "@types/prop-types": "^15.7.0",
     "@types/redux": "^3.6.0",
     "chai": "^3.5.0",
     "cross-env": "2.0.0",
@@ -37,7 +38,7 @@
     "prettier": "^1.16.4",
     "rimraf": "^2.6.2",
     "ts-node": "^7.0.1",
-    "tslint": "^5.11.0",
+    "tslint": "^5.13.1",
     "tslint-config-prettier": "^1.15.0",
     "typescript": "^3.3.3333"
   },
