--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/chai": "^4.1.4",
     "@types/mocha": "^5.2.5",
     "@types/prop-types": "^15.7.0",
+    "@types/redux": "^3.6.0",
     "chai": "^3.5.0",
     "cross-env": "2.0.0",
     "mocha": "^5.2.0",
@@ -39,7 +40,7 @@
     "ts-node": "^7.0.1",
     "tslint": "^5.13.1",
     "tslint-config-prettier": "^1.15.0",
-    "typescript": "^3.3.3333"
+    "typescript": "^3.6.2"
   },
   "dependencies": {
     "redux": "^4.0.1"
